2006-08-24 21:53  bellard

	* block.c: fixed handling of relative filenames with -snapshot

2006-08-24 20:58  bellard

	* block-raw.c: win32 aio emulation fix

2006-08-23 23:40  bellard

	* block-raw.c, block.c: win32 compilation fixes

2006-08-23 23:14  bellard

	* block.c: fixed error handling

2006-08-21 22:28  bellard

	* qemu-doc.texi: update

2006-08-21 22:26  bellard

	* qemu-doc.texi: spelling fixes (Stefan Weil)

2006-08-19 18:56  bellard

	* qemu-doc.texi: removed outdated info

2006-08-19 16:27  bellard

	* sdl.c, keymaps/ja: Japanese keyboard fixes (kazu)

2006-08-19 14:38  bellard

	* Changelog: update

2006-08-19 14:37  bellard

	* tap-win32.c, vl.c, vl.h: win32 tap poll suppression (kazu)

2006-08-19 13:58  bellard

	* hw/usb-msd.c: delete block device

2006-08-19 13:58  bellard

	* hw/scsi-disk.c: no need for bdrv_close()

2006-08-19 13:45  bellard

	* block-raw.c, block.c, block_int.h, qemu-doc.texi, vl.h: better
	  support of host drives

2006-08-19 13:44  bellard

	* hw/ide.c: better support of removable media

2006-08-19 13:43  bellard

	* hw/fdc.c: use bdrv_media_changed()

2006-08-18 11:32  bellard

	* hw/: cirrus_vga.c, vga.c, vga_int.h: fixed VGA resolutions with
	  height > 1024

2006-08-17 19:41  bellard

	* Makefile.target: disable -fomit-frame-pointer

2006-08-17 19:22  bellard

	* qemu-doc.texi, vl.c: -L help

2006-08-17 18:19  bellard

	* osdep.c: fd leak fix (Igor Kovalenko)

2006-08-17 12:48  bellard

	* hw/ide.c: minimal PCI IDE save/restore

2006-08-17 12:48  bellard

	* hw/apic.c: save apic timer

2006-08-17 12:46  bellard

	* hw/: ne2000.c, pci.c, piix_pci.c, rtl8139.c: PCI save/restore
	  changes

2006-08-17 12:45  bellard

	* vl.h, hw/mips_r4k.c, hw/pc.c, hw/ppc_chrp.c, hw/ppc_prep.c: vga
	  init changes

2006-08-17 12:44  bellard

	* hw/: cirrus_vga.c, vga.c, vga_int.h: save VGA PCI state

2006-08-17 12:42  bellard

	* sdl.c: reset key modifiers when switching console (aka savevm
	  keyboard bug)

2006-08-17 11:43  bellard
